ECP-340: Task_assignTo now only proposes persons with party roles compatible with the task.  Also...
also:
- added layouts for PartyRole and PartyRoleType
- added mixins so can easily see persons and organisations with party roles, and addRole actions from context of PartyRole or PartyRoleType
- removes PartyRoleType#parties action since equivalent to these new mixins.

also:
- fixed title for PartyRole (no longer use TitleBuilder#withTupleElement, since incomplete anyway)